[package]
name = "double-checked-cell"
version = "1.1.0" # remember to update html_root_url
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT/Apache-2.0"
keywords = ["lazy", "cell", "once"]
readme = "README.md"
repository = "https://github.com/niklasf/double-checked-cell"
categories = ["concurrency"]
description = "A thread-safe lazily initialized cell using double-checked locking"

[badges]
travis-ci = { repository = "niklasf/double-checked-cell" }

[dependencies]
void = "1.0"
unreachable = "1.0"

[dev-dependencies]
scoped-pool = "1.0"
